@@ -1,6 +1,24 @@
 package com.yuanno.soulsawakening.data.misc;
 
+import java.util.ArrayList;
+
 public interface IMiscData {
+
+    void setUnlockedZanpakutoStyle(ArrayList<String> styleList);
+
+    void addUnlockedZanpakutoStyle(String addition);
+
+    void removeUnlockedZanpakutoStyle(String remove);
+
+    ArrayList<String> getUnlockedZanpakutoStyle();
+
+    void setZanpakutoStyle(String zanpakutoStyle);
+
+    String getZanpakutoStyle();
+
+    void setRenderZanpakutoOverlay(boolean setFlag);
+
+    boolean getRenderZanpakutoOverlay();
 
     void setCanRenderOverlay(boolean flag);
     boolean getCanRenderOverlay();
